# ProfileManagerCLI

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/cli/: Menu.cpp  Menu.hpp
src/domain/: Profile.cpp  Profile.hpp
src/persistence/: ProfileSerializer.cpp  ProfileSerializer.hpp
src/service/: ProfileStore.cpp  ProfileStore.hpp
